[package]
name = "ramflux-tui"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license = "AGPL-3.0-or-later"
publish = false
repository = "https://github.com/ramfluxhq/ramflux-tui"

[[bin]]
name = "rf-tui"
path = "src/main.rs"

[dependencies]
ramflux-protocol = { git = "https://github.com/ramfluxhq/ramflux", branch = "main" }
ramflux-sdk = { git = "https://github.com/ramfluxhq/ramflux", branch = "main" }
ramflux-sync = { git = "https://github.com/ramfluxhq/ramflux", branch = "main" }
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.29"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.42", features = ["macros", "rt", "rt-multi-thread", "time"] }

[lints.rust]
warnings = "deny"
unsafe_code = "deny"

[lints.clippy]
all = "deny"
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"
