[package]
name = "ramflux-cli-pro"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license = "UNLICENSED"
publish = false
repository = "ssh://forgejo/ramflux/ramflux-cli-pro"

[[bin]]
name = "rf-tui"
path = "src/main.rs"

[dependencies]
# private UI shell over the open local bus client
ramflux-protocol = { path = "../ramflux-protocol" }
ramflux-sdk = { path = "../ramflux-sdk" }
ramflux-sync = { path = "../ramflux-sync" }
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.29"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.42", features = ["macros", "rt", "rt-multi-thread", "time"] }

[lints.rust]
warnings = "deny"
unsafe_code = "deny"

[lints.clippy]
all = "deny"
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"
